# WLM-Knowledge-Engine

./: README.md  pyproject.toml
docs/: api.md  knowledge-rules.md  overview.md  roadmap.md
examples/: simple_fact.md  temporal_sequence.md
examples/examples/: causal_chain.md
src/wlm_knowledge_engine/: __init__.py  api.py  cli.py  closure_predictor.py  dimension_engine.py  extractor.py  graph_builder.py  tension_detector.py
tests/: test_cli.py  test_closure_predictor.py  test_dimension_engine.py  test_end_to_end.py  test_extractor.py  test_graph_builder.py  test_tension_detector.py
